--- a/resources/custom-properties.yml
+++ b/resources/custom-properties.yml
@@ -110,3 +110,16 @@ opdk_group_create: False
 
 # Load balancer if available
 # load_balancer: 'fqdn or ip address for load balancer'
+
+# Set to y if you are connecting to a remote LDAP server.
+# If n, Edge installs OpenLDAP when it installs the Management Server.
+use_opdk_ldap_remote_host: n
+
+# If connecting to remote OpenLDAP server, specify the IP/DNS name and port.
+# opdk_ldap_host:       # IP or DNS name of OpenLDAP node.
+# opdk_ldap_port:10389  # Default is 10389.
+
+# Specify OpenLDAP without replication, 1, or with replication, 2.
+opdk_ldap_type: 1
+
+
