--- a/setup-base.yml
+++ b/setup-base.yml
@@ -7,6 +7,7 @@
 
   tasks:
   - name: Ensure ansible configuration folders exist
+    tags: ['config','playbooks','roles']
     file:
       path: '{{ item }}'
       state: directory
@@ -14,6 +15,7 @@
     tags: ['config']
 
   - name: Configure git attributes
+    tags: ['config','playbooks','roles']
     git_config:
       name: "{{ item.name }}"
       scope: "{{ item.scope }}"
@@ -60,7 +62,7 @@
     - name: Git checkout of configuration repositories
       tags: ['config']
       become: false
-      ignore_errors: yes
+#      ignore_errors: yes
       git:
         repo: '{{ repository_secure_endpoint_https }}/{{ item.repo_name }}.git'
         dest: "{{ item.workspace }}/{{ item.repo_name }}"
@@ -73,7 +75,7 @@
       git:
         repo: '{{ repository_secure_endpoint_https }}/{{ item.repo_name }}.git'
         dest: "{{ item.workspace }}/{{ item.repo_name }}"
-        accept_hostkey: yes
+#        accept_hostkey: yes
       with_items: "{{ playbook_repos }}"
 
     - name: Git checkout of role repositories
@@ -82,7 +84,7 @@
       git:
         repo: '{{ repository_secure_endpoint_https }}/{{ item.repo_name }}.git'
         dest: "{{ item.workspace }}/{{ item.repo_name }}"
-        accept_hostkey: yes
+#        accept_hostkey: yes
         update: yes
         version: master
       with_items: "{{ role_repos }}"
@@ -90,12 +92,14 @@
     when: checkout_type is defined and checkout_type | trim == 'https'
 
   - name: Add empty credentials.yml file to .apigee-secure
+    tags: ['config','playbooks','roles']
     copy:
       src: resources/credentials.yml
       dest: '{{ apigee_security }}/credentials.yml'
       force: no
 
   - name: Add empty custom-properties.yml file to .apigee
+    tags: ['config','playbooks','roles']
     copy:
       src: resources/custom-properties.yml
       dest: '{{ apigee_config }}/custom-properties.yml'
