updated attributes for upload and install of archive

--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -8,29 +8,31 @@
 # apigee_repo_password: admin
 
 # Edge Admin User
-# opdk_user_email:
-# opdk_user_pass:
+opdk_user_email: opdk@apigee.com
+opdk_user_pass: Apigee123!
 
 # Edge System User
-# opdk_user_name:
-# opdk_group_name:
+opdk_user_name: apigee
+opdk_group_name: apigee
+
+# Edge Openldap Password
+opdk_ldap_pass: Apigee123!
 
 # Grafana Credentials
 # grafana_username: admin
 # grafana_password: '{{ opdk_user_pass }}'
 
 # Cassandra Credentials
-# opdk_cass_username: cassandra
-# opdk_cass_password: '{{ opdk_user_pass }}'
+opdk_cass_username: cassandra
+opdk_cass_password: '{{ opdk_user_pass }}'
 
 # Email Credentials
 # opdk_smtp_user:
 # opdk_smtp_password:
-# opdk_ldap_pass:
 
 # Apigee Analytics Postgres credentials
-# pg_user:
-# pg_pass:
+pg_user: postgres
+pg_pass: postgres
 
 # Drupal Postgres Admin
 # drupal_pg_user: drupal_admin
