updated become user for upgrade

--- a/resources/custom-properties.yml
+++ b/resources/custom-properties.yml
@@ -126,4 +126,4 @@ opdk_ldap_type: 1
 # org_name:
 
 clear_etc_hosts:
-- { regexp: '(^::1.*localhost6.*)$', replace: "# \1" }
+- { regexp: '(^::1.*localhost6.*)$', replace: '# \1' }
