updated become user for upgrade

--- a/resources/custom-properties.yml
+++ b/resources/custom-properties.yml
@@ -61,6 +61,9 @@ yum_packages:
 - rng-tools
 - sed
 
+yum_exclude_packages:
+- 'qpid-proton-c'
+
 # These are optional yum packages that are useful for troubleshooting
 os_packages:
 - lsof
