Updated template credentials.yml with defaults

--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -19,8 +19,8 @@ opdk_group_name: apigee
 opdk_ldap_pass: Apigee123!
 
 # Grafana Credentials
-# grafana_username: admin
-# grafana_password: '{{ opdk_user_pass }}'
+grafana_username: admin
+grafana_password: '{{ opdk_user_pass }}'
 
 # Cassandra Credentials
 opdk_cass_username: cassandra
