Updated default properties

--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -16,7 +16,7 @@ opdk_user_name: apigee
 opdk_group_name: apigee
 
 # Edge Openldap Password
-opdk_ldap_pass: Apigee123!
+opdk_ldap_pass: '{{ opdk_user_pass }}'
 
 # Grafana Credentials
 grafana_username: admin
@@ -31,8 +31,8 @@ opdk_cass_password: '{{ opdk_user_pass }}'
 # opdk_smtp_password:
 
 # Apigee Analytics Postgres credentials
-pg_user: postgres
-pg_pass: postgres
+pg_user: apigee
+pg_pass: '{{ opdk_user_pass }}'
 
 # Drupal Postgres Admin
 # drupal_pg_user: drupal_admin
@@ -52,22 +52,6 @@ pg_pass: postgres
 # Dev Portal Developer Admin
 # dp_devadmin_user: "{{ opdk_user_email }}"
 # dp_devadmin_pwd: "{{ opdk_user_pass }}"
-
-# BaaS Admin Credentials
-# baas_admin_name:
-# baas_admin_email cannot be the same as  baas_superuser_email
-# baas_admin_email:
-# baas_admin_pass:
-
-# BaaS Superuser Credentials
-# baas_superuser_email cannot be the same as baas_admin_email
-# baas_superuser_email:
-# baas_superuser_name:
-# baas_superuser_pass:
-
-# BaaS Email Credentials
-# baas_smtp_user:
-# baas_smtp_user_pass:
 
 # AWS credentials
 # aws_access_key:
