--- a/resources/custom-properties.yml
+++ b/resources/custom-properties.yml
@@ -1,14 +1,16 @@
 ---
-opdk_version: 4.17.09
+opdk_version: 4.18.01
 target_logs_folder: "~/.apigee/planet_resources/"
 assign_mgmt_ip: True
 
 # Variable to indicate the previous OPDK version to upgrade from
-upgrade_from_opdk_version: 4.17.01
+# upgrade_from_opdk_version: 4.17.01
 
 # apigee_repo_uri: 10.142.0.4:3939
 # apigee_repo_protocol: http
-# apigee_repo_url: "{{ apigee_repo_protocol }}://{{ apigee_repo_uri }}"
+ apigee_repo_url: "http://software.apigee.com"
+ opdk_license_source_file_name: ~/.apigee-secure/license.txt
+ opdk_license_target_file_path: /tmp/edge/license.conf
 
 # pip_index_url: "https://private.repository.com/api/pypi/Pypi-remote/simple"
 # pip_conf_dir: "~/.pip"
