Updated to receive a collection of instance_tags

--- a/resources/custom-properties.yml
+++ b/resources/custom-properties.yml
@@ -152,10 +152,12 @@ clear_etc_hosts:
 # OS Config for all Nodes
 sysctl_minimum:
 - { name: 'vm.swappiness', value: "{{ vm_swappiness }}" }
-- { name: 'net.ipv6.conf.all.disable_ipv6', value: '1' }
-- { name: 'net.ipv6.conf.default.disable_ipv6', value: '1' }
 - { name: 'net.ipv4.tcp_fin_timeout', value: "{{ apigee_net_ipv4_tcp_fin_timeout }}" }
 - { name: 'vm.max_map_count', value: '{{ apigee_max_map_count }}' }
+
+sysctl_ipv6:
+- { name: 'net.ipv6.conf.all.disable_ipv6', value: '1' }
+- { name: 'net.ipv6.conf.default.disable_ipv6', value: '1' }
 
 # OS Config for Postgres
 apigee_kernel_sem: '500 32000 32 1024'
