--- a/resources/custom-properties.yml
+++ b/resources/custom-properties.yml
@@ -155,6 +155,7 @@ sysctl_minimum:
 - { name: 'net.ipv4.tcp_fin_timeout', value: "{{ apigee_net_ipv4_tcp_fin_timeout }}" }
 - { name: 'vm.max_map_count', value: '{{ apigee_max_map_count }}' }
 
+# OS Config for IPV6
 sysctl_ipv6:
 - { name: 'net.ipv6.conf.all.disable_ipv6', value: '1' }
 - { name: 'net.ipv6.conf.default.disable_ipv6', value: '1' }
