--- a/resources/custom-properties.yml
+++ b/resources/custom-properties.yml
@@ -8,6 +8,7 @@ assign_mgmt_ip: True
 
 # apigee_repo_uri: 10.142.0.4:3939
 # apigee_repo_protocol: http
+# apigeereleasever: 4.18.01
  apigee_repo_url: "http://software.apigee.com"
  opdk_license_source_file_name: ~/.apigee-secure/license.txt
  opdk_license_target_file_path: /tmp/edge/license.conf
