--- a/repository-mapping-name-folder.yml
+++ b/repository-mapping-name-folder.yml
@@ -136,3 +136,4 @@ role_repos:
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-scopes-add }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-scopes-remove }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-scopes-state }
+- { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-update-component-qpidd }
