Updates to docs and sequence of role invocations.

--- a/repository-mapping-name-folder.yml
+++ b/repository-mapping-name-folder.yml
@@ -137,3 +137,4 @@ role_repos:
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-scopes-remove }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-scopes-state }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-update-component-qpidd }
+- { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-os-sysctl }
