--- a/repository-mapping-name-folder.yml
+++ b/repository-mapping-name-folder.yml
@@ -138,3 +138,5 @@ role_repos:
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-scopes-state }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-update-component-qpidd }
 - { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-os-sysctl }
+- { workspace: '{{ role_workspace }}', repo_name: apigee-opdk-setup-edge-sso }
+
