--- a/private-gitlab-repository-create-update.yml
+++ b/private-gitlab-repository-create-update.yml
@@ -17,6 +17,7 @@
         PRIVATE-TOKEN: "{{ private_token }}"
       status_code: 201,409
     with_items:
+    - "Delete-Me"
     - "{{ config_repos }}"
     - "{{ playbook_repos }}"
     - "{{ role_repos }}"
