Updated to create project for gitlab and share with group

--- a/private-gitlab-repository-create-update.yml
+++ b/private-gitlab-repository-create-update.yml
@@ -22,6 +22,11 @@
 #    - "{{ playbook_repos }}"
 #    - "{{ role_repos }}"
 
+  - name: Show repos structure
+    tags: ['create']
+    debug:
+      var: repos
+
   - name: Share repos with group
     tags: ['create']
     uri:
