Updated to create project for gitlab and share with group

--- a/private-gitlab-repository-create-update.yml
+++ b/private-gitlab-repository-create-update.yml
@@ -49,7 +49,7 @@
       url: "{{ repository_secure_endpoint_https }}/projects/{{ repos.results[0].json.id }}/share"
       method: POST
       headers:
-        PRIVATE-TOKEN: "{{ private_token }}"
+        PRIVATE-TOKEN: "{{ token }}"
       status_code: 201,409
 
   - name: Add permissions to Bitbucket repositories
