--- a/private-gitlab-repository-create-update.yml
+++ b/private-gitlab-repository-create-update.yml
@@ -11,7 +11,7 @@
     tags: ['create']
     register: repos
     uri:
-      url: "{{ repository_secure_endpoint_https }}/Daniel.Mangino.1233964715/projects/{{ item }}"
+      url: "{{ repository_secure_endpoint_https }}/projects/Daniel.Mangino.1233964715/{{ item }}"
       method: DELETE
       headers:
         PRIVATE-TOKEN: "{{ token }}"
