--- a/private-gitlab-repository-create-update.yml
+++ b/private-gitlab-repository-create-update.yml
@@ -7,17 +7,17 @@
   - repository-custom-properties.yml
   - private-repository-user-list.yml
   tasks:
-  - name: Remove Gitlab repositories if necessary
-    tags: ['create']
-    register: repos
-    uri:
-      url: "{{ repository_secure_endpoint_https }}/projects/Daniel.Mangino.1233964715/{{ item }}"
-      method: DELETE
-      headers:
-        PRIVATE-TOKEN: "{{ token }}"
-      status_code: 201,404
-    with_items:
-    - "Delete-ME"
+#  - name: Remove Gitlab repositories if necessary
+#    tags: ['create']
+#    register: repos
+#    uri:
+#      url: "{{ repository_secure_endpoint_https }}/projects/Daniel.Mangino.1233964715/{{ item }}"
+#      method: DELETE
+#      headers:
+#        PRIVATE-TOKEN: "{{ token }}"
+#      status_code: 201,404
+#    with_items:
+#    - "Delete-ME"
 
   - name: Create Gitlab repositories if necessary
     tags: ['create']
