--- a/private-gitlab-repository-create-update.yml
+++ b/private-gitlab-repository-create-update.yml
@@ -55,7 +55,7 @@
       body:
         group_id: api-management
         group_access: 30
-        expires_at: 2018-04-30
+        expires_at: "2018-04-30"
 
   - name: Add permissions to Bitbucket repositories
     uri:
