--- a/private-gitlab-repository-create-update.yml
+++ b/private-gitlab-repository-create-update.yml
@@ -42,7 +42,6 @@
   - name: Pause to show debug output
     pause:
 
-
   - name: Share repos with group
     tags: ['create']
     uri:
@@ -53,7 +52,7 @@
       status_code: 201,409
       body_format: json
       body:
-        group_id: api-management
+        group_id: 369
         group_access: 30
         expires_at: "2018-04-30"
 
