Distributed variables into placeholder files in credentials.yml and custom-properties.yml

--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -56,3 +56,9 @@ pg_pass: '{{ opdk_user_pass }}'
 # AWS credentials
 # aws_access_key:
 # aws_secret_key:
+
+# Edge UI SAML Integration
+sso_admin_name: ssoadmin
+sso_admin_secret: '{{ opdk_user_pass }}'
+edgeui_sso_client_name: edgeui
+edgeui_sso_client_secret: '{{ opdk_user_pass }}'
