Distributed variables into placeholder files in credentials.yml and custom-properties.yml

--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -31,7 +31,7 @@ opdk_cass_password: '{{ opdk_user_pass }}'
  opdk_smtp_password: '{{ opdk_user_pass }}'
 
 # Apigee Analytics Postgres credentials
-pg_user: apigee
+pg_user: '{{ opdk_user_name }}'
 pg_pass: '{{ opdk_user_pass }}'
 
 # Drupal Postgres Admin
