--- a/setup-ansible-config.yml
+++ b/setup-ansible-config.yml
@@ -5,10 +5,10 @@
   - repository-custom-properties.yml
   vars_prompt:
     - name: username
-      prompt: "Enter your the username for ansible"
+      prompt: "enter your the username for ansible"
       private: no
   tasks:
-  - name: Create ansible.cfg file from template
+  - name: create ansible.cfg file from template
     template:
       src: resources/ansible.cfg.j2
       dest: "{{ apigee_workspace }}/apigee-opdk-playbook-setup-ansible/ansible.cfg"
