exposed additional sso and saml properties

--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -62,3 +62,4 @@ sso_admin_name: ssoadmin
 sso_admin_secret: '{{ opdk_user_pass }}'
 edgeui_sso_client_name: edgeui
 edgeui_sso_client_secret: '{{ opdk_user_pass }}'
+sso_saml_service_provider_password: "samlSP123"
