--- a/resources/custom-properties.yml
+++ b/resources/custom-properties.yml
@@ -195,7 +195,7 @@ apigee_limits:
 #- yum-plugin-priorities
 #- apigee-qpidd
 
-# Edge SSO Configuration
+# Edge SSO and SAML Configuration
 edge_sso_installation_config_filename: edge-sso-installer-config.conf
 edge_sso_installation_config_file: "{{ opdk_installer_path }}/{{ edge_sso_installation_config_filename }}"
 jwt_key_folder: "{{ apigee_home }}/customer/application/apigee-sso/jwt-keys"
@@ -219,8 +219,6 @@ sso_saml_idp_metadata_url: "{{ saml_folder }}/target_idp_metadata_url.xml"
 sso_profile: "saml"
 sso_tomcat_port: 9099
 sso_tomcat_profile: DEFAULT
-
-# Edge UI SAML Integration
 edgeui_response_file_name: edge-ui-saml-response.conf
 edgeui_response_file_path: "{{ opdk_installer_path }}/{{ edgeui_response_file_name }}"
 edgeui_public_uris: http://{{ local_mgmt_ip }}:9000
